--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,7 +12,7 @@
         android:icon="@drawable/ic_atualiza"
         app:showAsAction="always"/>
 
-    <item android:id="@+id/ic_deleta"
+    <item android:id="@+id/menu_deleta"
         android:title="Deletar"
         android:icon="@drawable/ic_deleta"
         app:showAsAction="always"/>
