--- a/app/src/main/res/layout/activity_cloud_messaging.xml
+++ b/app/src/main/res/layout/activity_cloud_messaging.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".CloudMessaging">
 
+    <TextView
+        android:id="@+id/textNotification"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="282dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="430dp"
+        android:text="Aqui será recebido o texto de notificação"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
