--- a/app/src/main/res/layout/activity_crash.xml
+++ b/app/src/main/res/layout/activity_crash.xml
@@ -4,22 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CloudMessaging">
+    tools:context=".CrashActivity">
 
-    <TextView
-        android:id="@+id/textNotification"
-        android:layout_width="0dp"
+    <Button
+        android:id="@+id/button_crash"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="282dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="430dp"
-        android:text="Aqui será recebido o texto de notificação"
-        android:textAlignment="center"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="199dp"
+        android:layout_marginEnd="162dp"
+        android:layout_marginBottom="484dp"
+        android:text="CRASH"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
 </android.support.constraint.ConstraintLayout>
